yamls/parsoid/pod_parsoid-release-name-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
  name: parsoid-RELEASE-NAME-service-checker
spec:
  containers:
  - args:
    - -t
    - "5"
    - $(PARSOID_RELEASE_NAME_SERVICE_HOST)
    - http://parsoid-RELEASE-NAME:80
    image: docker-registry.wikimedia.org/service-checker
    imagePullPolicy: IfNotPresent
    name: parsoid-RELEASE-NAME-service-checker
  dnsPolicy: ClusterFirst
  restartPolicy: Never
