yamls/parsoid/service_parsoid-release-name.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: parsoid
    chart: parsoid-0.1.1
    heritage: Helm
    release: RELEASE-NAME
  name: parsoid-RELEASE-NAME
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8142
  selector:
    app: parsoid
    release: RELEASE-NAME
    routed_via: RELEASE-NAME
  type: NodePort
