yamls/parsoid/networkpolicy_parsoid-release-name.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: parsoid
    chart: parsoid-0.1.1
    heritage: Helm
    release: RELEASE-NAME
  name: parsoid-RELEASE-NAME
spec:
  ingress:
  - ports:
    - port: 8142
      protocol: TCP
    - port: 9102
      protocol: TCP
  podSelector:
    matchLabels:
      app: parsoid
      release: RELEASE-NAME
  policyTypes:
  - Ingress
